--- a/proiecte.html
+++ b/proiecte.html
@@ -106,15 +106,15 @@
         <div class="container3">
             <div class="gallery-bg">
                 <div class="thumbnails">
-                    <img onmouseover="preview.src=img2.src" name="img2" src="/img/proiecte1.jpg"/>
-                    <img onmouseover="preview.src=img3.src" name="img3" src="/img/proiecte2.jpg"/>
-                    <img onmouseover="preview.src=img1.src" name="img1" src="/img/proiecte3.jpg"/>
-                    <img onmouseover="preview.src=img4.src" name="img4" src="/img/proiecte4.jpg"/>
-                    <img onmouseover="preview.src=img5.src" name="img5" src="/img/proiecte6.jpg"/>
+                    <img onmouseover="preview.src=img2.src" name="img2" src="img/proiecte1.jpg"/>
+                    <img onmouseover="preview.src=img3.src" name="img3" src="img/proiecte2.jpg"/>
+                    <img onmouseover="preview.src=img1.src" name="img1" src="img/proiecte3.jpg"/>
+                    <img onmouseover="preview.src=img4.src" name="img4" src="img/proiecte4.jpg"/>
+                    <img onmouseover="preview.src=img5.src" name="img5" src="img/proiecte6.jpg"/>
                 </div>
                 <br>
                 <div class="preview">
-                    <img name="preview" src="/img/proiecte1.jpg" />
+                    <img name="preview" src="img/proiecte1.jpg" />
                 </div>
             </div>
         </div>
